welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: value !== is not a member of Int
    if (getY()!==abscisseFinale){
              ^