welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var abscisseFinale = getMondeLargeur()-1
  var ordonneeFinale = getMondeHauteur()-1
  var compteur=0
  ecritMessage(compteur)
  while (getX()!=ordonneeFinale && getY()!=abscisseFinale){
    compteur = compteur +1
    if (getY()!==abscisseFinale){
      setPos(0,getY()+1)
    } else{
      setPos(getX()+1,getY())
    }
    ecritMessage(compteur)
  }
}